tests/ui/mismatch_if_else.ina
// SKIP
// COMPILE_FAIL

fn main() {
    let a = if true { 50 } else { 20. };
    let a = if true {
        50
    } else {
        20.
    };
}

